# md24de-mcp

./: .gitignore  README.md  pyproject.toml  sonar-project.properties
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml
src/md24de_mcp/: __init__.py  __main__.py  _cache.py  _config.py  server.py
tests/: conftest.py  test_cache.py  test_config.py  test_init.py  test_server.py
