[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "md24de-mcp"
version = "0.1.0"
description = "Unofficial MCP server for the messdienst24.de utility portal via python-md24de"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Volker Schmidt" }]
keywords = ["md24de", "messdienst24", "energy", "consumption", "mcp", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=1.0",
    "python-md24de @ git+https://github.com/volsch/python-md24de.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "pyright>=1.1",
    "ruff>=0.9",
    "pip-licenses>=5.0",
    "mcp[cli]>=1.0",
]

[project.scripts]
md24de-mcp = "md24de_mcp:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/md24de_mcp"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
venvPath = "."
venv = ".venv"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "S", "B", "C4", "PIE", "RET", "SIM"]
ignore = [
    "S101",   # Use of assert (needed in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S105", "S106"]  # hardcoded test credentials are not real secrets

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/md24de_mcp"]
branch = true
relative_files = true
omit = ["src/md24de_mcp/__main__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 90
